# dio_blog

./: .env.example  .gitignore  README.md  pyproject.toml  render-deploy.sh
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 1a6d1ff8e3a9_add_initial_tables.py  a7d392128249_add_user_id_to_posts_with_default.py  d58eb4382652_add_role_to_users.py  e03c925a3753_add_users_table.py
src/: config.py  database.py  expections.py  main.py  security.py
src/controllers/: auth.py  post.py  user.py
src/models/: post.py  user.py
src/schemas/: auth.py  user.py
src/services/: email.py  post.py  user.py
src/views/: post.py  user.py
tests/: conftest.py
tests/integrations/controllers/auth/: test_login.py
tests/integrations/controllers/post/: test_create_post.py  test_delete_post.py  test_read_all_post.py  test_read_my_posts.py  test_read_post.py  test_update_post.py
tests/integrations/controllers/user/: test_create_user.py  test_delete_user.py  test_read_all_users.py  test_read_me_user.py  test_read_user.py  test_toogle_user_status.py  test_update_user.py  test_user.py
